Fix Java 11 compatibility issue
Signed-off-by: Alexander Pinčuk <alexander.v.pinchuk@gmail.com>